--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,20 +1,25 @@
+
+
 html{
     box-sizing: border-box;
 }
+
 *, *::before, *::after{
     box-sizing: inherit;
 }
+
 a{
     text-decoration: none;
     color: inherit;
 }
+
 ul,
 li{
     margin: 0;
     padding: 0;
     list-style: none;
-
 }
+
 h1,
 h2,
 h3,
@@ -24,15 +29,18 @@ h6{
     margin: 0;
     font-size: inherit;
 }
+
 body{
     position: relative;
     min-width: 320px;
     overflow-x: hidden;
+    @extend %raleway-light;
     background-color: #EDECE9;
     color: #353b42;
     font-size: 18px;
     line-height: 25px;
 }
+
 .container{
     max-width: 1200px;
     margin: 0 auto;
