--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,7 +5,42 @@
 @import "global";
 
 
-
-
-
 @import "media";
+
+.header{
+    margin-top: 30px;
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 16px;
+        line-height: 15px;
+        @extend %raleway-light;
+    }
+}
+
+.menu__list{
+    &-item{
+        display: inline-block;
+        & + .menu__list-item{
+            padding-left: 100px;
+        }
+    }
+}
+
+.basic-info{
+    margin-top: 150px;
+    &__inner{
+    display: flex;
+    justify-content: space-around;
+    }
+    &__title{
+        font-size: 25px;
+    }
+    &__img{
+        width: 100%;
+        max-width: 400px;
+        height: auto;
+        max-height: 520px;
+    }
+}
